--- a/heart/heart.html
+++ b/heart/heart.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.5.0/css/font-awesome.min.css"/>
-			<link rel="stylesheet" type="text/css" href="heart.css"/>
-	</head>
-	<body>
-		<ol class="grid">
-				<li class="grid__item">
-					<button class="icobutton icobutton--heart"><span class="fa fa-heart"></span><span class="icobutton__text icobutton__text--side"></span></button>
-				</li>
-		</ol>
-		<script src="js/mo.min.js"></script>
-		<script src="js/demo1.js"></script>
-	</body>
+<head>
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.5.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="heart.css"/>
+</head>
+<body>
+	<ol class="grid">
+		<li class="grid__item">
+			<button class="icobutton icobutton--heart"><span class="fa fa-heart"></span><span class="icobutton__text icobutton__text--side"></span></button>
+		</li>
+	</ol>
+	<script src="js/mo.min.js"></script>
+	<script src="js/animation.js"></script>
+</body>
 </html>
