--- a/sudhar/courses page.html
+++ b/sudhar/courses page.html
@@ -12,36 +12,36 @@
 			<iframe src="https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/android.svg" width="40%" height="20%"></iframe>
 			<br>CSE<br>
 			<img src="java.png" width="40%" height="20%">
-			<button class="button" style="vertical-align:middle"><span>TRENDING</span></button>
-			<button class="button" style="vertical-align:middle"><span>ALL COURSES</span></button>
+			<button class="button"><span>TRENDING</span></button>
+			<button class="button"><span>ALL COURSES</span></button>
 		</div>
 		<div class="box box-2">
 			<iframe src="https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/android.svg" width="40%" height="20%"></iframe>
 			<br>ECE<br>
 			<img src="robot.png" width="40%" height="20%">
-			<button class="button" style="vertical-align:middle"><span>TRENDING</span></button>
-			<button class="button" style="vertical-align:middle"><span>ALL COURSES</span></button>
+			<button class="button"><span>TRENDING</span></button>
+			<button class="button"><span>ALL COURSES</span></button>
 		</div>
 		<div class="box box-3">
 			<iframe src="https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/android.svg" width="40%" height="20%" ></iframe>
 			<br>EEE<br>
 			<img src="matlab.png" width="40%" height="20%">
-			<button class="button" style="vertical-align:middle"><span>TRENDING</span></button>
-			<button class="button" style="vertical-align:middle"><span>ALL COURSES</span></button>
+			<button class="button"><span>TRENDING</span></button>
+			<button class="button"><span>ALL COURSES</span></button>
 		</div>
 		<div class="box box-4">
 			<iframe src="https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/android.svg" width="40%" height="20%" ></iframe>
 			<br>Mech<br>
 			<img src="matlab.png" width="40%" height="20%">
-			<button class="button" style="vertical-align:middle"><span>TRENDING</span></button>
-			<button class="button" style="vertical-align:middle"><span>ALL COURSES</span></button>
+			<button class="button"><span>TRENDING</span></button>
+			<button class="button"><span>ALL COURSES</span></button>
 		</div>
 		<div class="box box-5">
 			<iframe src="https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/android.svg" width="40%" height="20%" ></iframe>
 			<br>CIVIL<br>
 			<img src="autocad.png" width="40%" height="20%">
-			<button class="button" style="vertical-align:middle"><span>TRENDING</span></button>
-			<button class="button" style="vertical-align:middle"><span>ALL COURSES</span></button>
+			<button class="button"><span>TRENDING</span></button>
+			<button class="button"><span>ALL COURSES</span></button>
 		</div>
 	</div>
 	<div>
